...
            "state": "translated",
            "value": "無法解密來自 %@ 的訊息"
          }
        }
      }
    },
    "Cancel": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
...
            "state": "translated",
            "value": "請連接相同的 WiFi 網路以傳輸檔案"
          }
        }
      }
    },
    "Connected": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Connected"
...
      }
    },
    "Last connected: %@": {
      "comment": "A sublabel inside the list item, showing the relative time since the last connection to a device. The text inside the parentheses is a placeholder that should be replaced with the actual relative time.",
      "isCommentAutoGenerated": true
    },
    "Library": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Library"
...
            "state": "translated",
            "value": "管理 Tailnet 節點"
          }
        }
      }
    },
    "Manual Connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Manual Connect"
...
            "state": "translated",
            "value": "名稱"
          }
        }
      }
    },
    "Nearby": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Nearby"
...
            "state": "translated",
            "value": "發現對等端"
          }
        }
      }
    },
    "PeerDrop": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "PeerDrop"
...
            "state": "translated",
            "value": "個人照片"
          }
        }
      }
    },
    "Quick Connect": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Quick Connect"
...
